<resources>
    <string name="app_name">Agile</string>
    <string name="title_activity_login">Ingresar</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Usuario</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_last">Apellido</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_re_password">Repetir Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">El correo es incorrecto!</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta!</string>
    <string name="error_field_required">Este campo es requerido.</string>
    <string name="prompt_create_acount">Crear cuenta</string>
    <string name="prompt_go_login">Ya eres miembro? Ingresa </string>
    <string name="prompt_go_register"> Registrar </string>

    <!-- Strings de Proyectos -->
    <string name="nombre_proyecto">Nombre del Proyecto</string>
    <string name="desc_proyecto">Descripción del Proyecto</string>
    <string name="year_proyecto">Año</string>
    <string name="fecha_proyecto">Fecha de inicio del Proyecto</string>

    <!-- Strings de Usuarios -->
    <string name="codigo_user_buscar">Código de Usuario</string>
    <string name="nombre_user">Nombre del Usuario</string>
    <string name="apell_user">Apellido del Usuario</string>

    <!-- Strings de Tareas -->
    <string name="codigo_tarea_buscar">Código de Tarea</string>
    <string name="nombre_tarea">Nombre de la Tarea</string>
    <string name="desc_tarea">Descripción de la Tarea</string>
    <string name="duracion_tarea">Duración de la Tarea</string>
    <string name="fecha_inicio_tarea">Fecha Inicio de la Tarea</string>
    <string name="fecha_fin_tarea">Fecha Fin de la Tarea</string>



    <!-- Strings de Botones -->
    <string name="lbl_btn_buscar">Buscar</string>
    <string name="lbl_btn_crear">Crear</string>
    <string name="lbl_btn_modif">Modificar</string>
    <string name="lbl_btn_eliminar">Eliminar</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_nav">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar Sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
