<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fpuna.is2.agile.ModificarUsuario">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <!-- Codigo de Usuario -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/cod_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/codigo_user_buscar" />
            </android.support.design.widget.TextInputLayout>
            <!-- Nombre del Usuario -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/nombre_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/nombre_user" />
            </android.support.design.widget.TextInputLayout>
            <!-- Apellido del Usuario -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/apell_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/apell_user" />
            </android.support.design.widget.TextInputLayout>
            <!-- Rol del Usuario -->
            <Spinner
                android:id="@+id/idSpinRol"
                android:layout_width="match_parent"
                android:layout_height="49dp" />

            <!-- Modificar Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_modif_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/lbl_btn_modif"/>
            <!-- Eliminar Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_eliminar_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/lbl_btn_eliminar"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
