<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fpuna.is2.agile.BuscarTarea">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <!-- Codigo a Buscar -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/cod_tarea_buscar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/codigo_tarea_buscar" />
            </android.support.design.widget.TextInputLayout>
            <!-- Lista de Tareas -->
            <ListView
                android:id="@+id/lisViewTarea"
                android:layout_width="match_parent"
                android:layout_height="302dp" />

            <!-- Buscar Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_buscar_tarea"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:padding="12dp"
                android:text="@string/lbl_btn_buscar" />
            <!-- Crear Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_crear_tarea"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:padding="12dp"
                android:text="@string/lbl_btn_crear" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
